kubernetes/apps/base/victoria-logs/httproute-mesh.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vlogs-mesh
spec:
  parentRefs:
    - name: mesh
      namespace: envoy-system
  hostnames:
    - vlogs.${BOOTSTRAP_MESH_DOMAIN}
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - backendRefs:
        - name: victoria-logs-vlselect
          port: 9471
